--- a/ShamanShowdown/ShamanShowdown.vcxproj.filters
+++ b/ShamanShowdown/ShamanShowdown.vcxproj.filters
@@ -25,6 +25,12 @@
     <Filter Include="Source Files\Rendering\Components">
       <UniqueIdentifier>{fef80bd8-38c1-4de3-b744-a2b15a91b735}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Maths">
+      <UniqueIdentifier>{5d2dbe01-2de9-4290-a7ab-b36a0ba53185}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Maths">
+      <UniqueIdentifier>{74c27a3d-3612-4cf8-a5c8-b173a0a35dda}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -45,6 +51,12 @@
     <ClCompile Include="TransformComponent.cpp">
       <Filter>Source Files\Rendering\Components</Filter>
     </ClCompile>
+    <ClCompile Include="Maths.cpp">
+      <Filter>Source Files\Maths</Filter>
+    </ClCompile>
+    <ClCompile Include="Vector3.cpp">
+      <Filter>Source Files\Maths</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameState.h">
@@ -64,6 +76,12 @@
     </ClInclude>
     <ClInclude Include="TransformComponent.h">
       <Filter>Header Files\Rendering\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Vector3.h">
+      <Filter>Header Files\Maths</Filter>
+    </ClInclude>
+    <ClInclude Include="Maths.h">
+      <Filter>Header Files\Maths</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
