--- a/ShamanShowdown/ShamanShowdown.vcxproj
+++ b/ShamanShowdown/ShamanShowdown.vcxproj
@@ -68,8 +68,10 @@
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Maths.cpp" />
+    <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="RotationComponent.cpp" />
     <ClCompile Include="ScaleComponent.cpp" />
+    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TransformComponent.cpp" />
     <ClCompile Include="Vector3.cpp" />
   </ItemGroup>
@@ -78,8 +80,10 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="Maths.h" />
+    <ClInclude Include="Renderer.h" />
     <ClInclude Include="RotationComponent.h" />
     <ClInclude Include="ScaleComponent.h" />
+    <ClInclude Include="Texture.h" />
     <ClInclude Include="TransformComponent.h" />
     <ClInclude Include="Vector3.h" />
   </ItemGroup>
