--- a/ShamanShowdown/ShamanShowdown.vcxproj
+++ b/ShamanShowdown/ShamanShowdown.vcxproj
@@ -67,28 +67,37 @@
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameState.cpp" />
+    <ClCompile Include="HealthComponent.cpp" />
+    <ClCompile Include="InputComponent.cpp" />
+    <ClCompile Include="InventoryComponent.cpp" />
+    <ClCompile Include="MagicComponent.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Maths.cpp" />
-    <ClCompile Include="Melee.cpp" />
+    <ClCompile Include="MeleeComonent.cpp" />
+    <ClCompile Include="PhysicsComponent.cpp" />
+    <ClCompile Include="RenderComponent.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Team.cpp" />
     <ClCompile Include="Texture.cpp" />
-    <ClCompile Include="RotationComponent.cpp" />
-    <ClCompile Include="ScaleComponent.cpp" />
     <ClCompile Include="TransformComponent.cpp" />
     <ClCompile Include="Vector3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.h" />
+    <ClInclude Include="ComponentStub.h" />
     <ClInclude Include="GameComponent.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameState.h" />
+    <ClInclude Include="HealthComponent.h" />
+    <ClInclude Include="InputComponent.h" />
+    <ClInclude Include="InventoryComponent.h" />
+    <ClInclude Include="MagicComponent.h" />
     <ClInclude Include="Maths.h" />
-    <ClInclude Include="Melee.h" />
+    <ClInclude Include="MeleeComponent.h" />
+    <ClInclude Include="PhysicsComponent.h" />
+    <ClInclude Include="RenderComponent.h" />
     <ClInclude Include="Team.h" />
     <ClInclude Include="Renderer.h" />
-    <ClInclude Include="RotationComponent.h" />
-    <ClInclude Include="ScaleComponent.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TransformComponent.h" />
     <ClInclude Include="Vector3.h" />
