--- a/ShamanShowdown/ShamanShowdown.vcxproj.filters
+++ b/ShamanShowdown/ShamanShowdown.vcxproj.filters
@@ -14,6 +14,15 @@
     <ClCompile Include="TileColumn.cpp" />
     <ClCompile Include="TransformComponent.cpp" />
     <ClCompile Include="Vector3.cpp" />
+    <ClCompile Include="Character.cpp" />
+    <ClCompile Include="HealthComponent.cpp" />
+    <ClCompile Include="InputComponent.cpp" />
+    <ClCompile Include="InventoryComponent.cpp" />
+    <ClCompile Include="MagicComponent.cpp" />
+    <ClCompile Include="MeleeComonent.cpp" />
+    <ClCompile Include="PhysicsComponent.cpp" />
+    <ClCompile Include="RenderComponent.cpp" />
+    <ClCompile Include="Team.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Controls.h" />
@@ -30,6 +39,16 @@
     <ClInclude Include="TransformComponent.h" />
     <ClInclude Include="Vector3.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="Character.h" />
+    <ClInclude Include="ComponentStub.h" />
+    <ClInclude Include="HealthComponent.h" />
+    <ClInclude Include="InputComponent.h" />
+    <ClInclude Include="InventoryComponent.h" />
+    <ClInclude Include="MagicComponent.h" />
+    <ClInclude Include="MeleeComponent.h" />
+    <ClInclude Include="PhysicsComponent.h" />
+    <ClInclude Include="RenderComponent.h" />
+    <ClInclude Include="Team.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="test.tga" />
