--- a/ShamanShowdown/ShamanShowdown.vcxproj
+++ b/ShamanShowdown/ShamanShowdown.vcxproj
@@ -115,7 +115,12 @@
     <ClInclude Include="Vector3.h" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="shaman-red.tga" />
     <Image Include="test.tga" />
+    <Image Include="TEST2.tga" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="map1.gmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
