--- a/ShamanShowdown/ShamanShowdown.vcxproj.filters
+++ b/ShamanShowdown/ShamanShowdown.vcxproj.filters
@@ -53,8 +53,73 @@
   <ItemGroup>
     <Image Include="test.tga" />
     <Image Include="shaman-red.tga" />
+    <Image Include="Textures\board.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\bridge-horz.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\bridge-vert.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\grass-flowers.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\henge-lr.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\henge-tb.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\henge-tlbr.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\henge-trbl.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\hud.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\mud.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\river-horizontal.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\river-tesselate.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\river-vertical.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\sandy-stone.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\shrub.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\stone.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\tree.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\tree-rocks.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\wall.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\wiper-bar.tga">
+      <Filter>Textures</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="map1.gmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Textures">
+      <UniqueIdentifier>{e812b7e5-5f28-4b1d-9481-1314540a9d2d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
