--- a/ShamanShowdown/ShamanShowdown.vcxproj.filters
+++ b/ShamanShowdown/ShamanShowdown.vcxproj.filters
@@ -24,6 +24,7 @@
     <ClCompile Include="RenderComponent.cpp" />
     <ClCompile Include="Team.cpp" />
     <ClCompile Include="ObjectComponent.cpp" />
+    <ClCompile Include="ItemComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Controls.h" />
@@ -51,6 +52,7 @@
     <ClInclude Include="RenderComponent.h" />
     <ClInclude Include="Team.h" />
     <ClInclude Include="ObjectComponent.h" />
+    <ClInclude Include="ItemComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="test.tga" />
