--- a/ShamanShowdown/ShamanShowdown.vcxproj
+++ b/ShamanShowdown/ShamanShowdown.vcxproj
@@ -19,7 +19,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -135,6 +135,12 @@
     <Image Include="Textures\river-tesselate.tga" />
     <Image Include="Textures\river-vertical.tga" />
     <Image Include="Textures\sandy-stone.tga" />
+    <Image Include="Textures\shaman red_back_1.tga" />
+    <Image Include="Textures\shaman red_back_2.tga" />
+    <Image Include="Textures\shaman red_front_1.tga" />
+    <Image Include="Textures\shaman red_front_2.tga" />
+    <Image Include="Textures\shaman red_left_1.tga" />
+    <Image Include="Textures\shaman red_right_1.tga" />
     <Image Include="Textures\shrub.tga" />
     <Image Include="Textures\stone.tga" />
     <Image Include="Textures\tree-rocks.tga" />
