--- a/ShamanShowdown/ShamanShowdown.vcxproj.filters
+++ b/ShamanShowdown/ShamanShowdown.vcxproj.filters
@@ -117,6 +117,24 @@
     <Image Include="Textures\wiper-bar.tga">
       <Filter>Textures</Filter>
     </Image>
+    <Image Include="Textures\shaman red_front_1.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\shaman red_front_2.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\shaman red_left_1.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\shaman red_right_1.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\shaman red_back_1.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\shaman red_back_2.tga">
+      <Filter>Textures</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="map1.gmp" />
