--- a/ShamanShowdown/ShamanShowdown.vcxproj.filters
+++ b/ShamanShowdown/ShamanShowdown.vcxproj.filters
@@ -25,6 +25,7 @@
     <ClCompile Include="Team.cpp" />
     <ClCompile Include="ObjectComponent.cpp" />
     <ClCompile Include="ItemComponent.cpp" />
+    <ClCompile Include="UserInterface.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Controls.h" />
@@ -53,6 +54,7 @@
     <ClInclude Include="Team.h" />
     <ClInclude Include="ObjectComponent.h" />
     <ClInclude Include="ItemComponent.h" />
+    <ClInclude Include="UserInterface.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="test.tga" />
