Texture add cause we forgot

--- a/ShamanShowdown/ShamanShowdown.vcxproj
+++ b/ShamanShowdown/ShamanShowdown.vcxproj
@@ -127,11 +127,13 @@
     <Image Include="Textures\bridge-horz.tga" />
     <Image Include="Textures\bridge-vert.tga" />
     <Image Include="Textures\grass-flowers.tga" />
+    <Image Include="Textures\healtjficlnutdshit.tga" />
     <Image Include="Textures\henge-lr.tga" />
     <Image Include="Textures\henge-tb.tga" />
     <Image Include="Textures\henge-tlbr.tga" />
     <Image Include="Textures\henge-trbl.tga" />
     <Image Include="Textures\hud.tga" />
+    <Image Include="Textures\HUDYOURMUDDA.tga" />
     <Image Include="Textures\mud.tga" />
     <Image Include="Textures\river-horizontal.tga" />
     <Image Include="Textures\river-tesselate.tga" />
