--- a/ShamanShowdown/ShamanShowdown.vcxproj.filters
+++ b/ShamanShowdown/ShamanShowdown.vcxproj.filters
@@ -145,6 +145,15 @@
     <Image Include="Textures\HUDYOURMUDDA.tga">
       <Filter>Textures</Filter>
     </Image>
+    <Image Include="Textures\yourhudisshit.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\angryshitred.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\warmpissyellow.tga">
+      <Filter>Textures</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="map1.gmp" />
