--- a/ShamanShowdown/ShamanShowdown.vcxproj
+++ b/ShamanShowdown/ShamanShowdown.vcxproj
@@ -75,7 +75,7 @@
     <ClCompile Include="ItemComponent.cpp" />
     <ClCompile Include="MagicProjectileComponent.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Map.cpp" />
+    <ClCompile Include="MapComponent.cpp" />
     <ClCompile Include="Maths.cpp" />
     <ClCompile Include="MeleeComonent.cpp" />
     <ClCompile Include="ObjectComponent.cpp" />
@@ -89,7 +89,7 @@
     <ClCompile Include="TileCollection.cpp" />
     <ClCompile Include="TileColumn.cpp" />
     <ClCompile Include="TransformComponent.cpp" />
-    <ClCompile Include="UserInterface.cpp" />
+    <ClCompile Include="UserInterfaceComponent.cpp" />
     <ClCompile Include="Vector3.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -101,7 +101,7 @@
     <ClInclude Include="GameState.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="ItemComponent.h" />
-    <ClInclude Include="Map.h" />
+    <ClInclude Include="MapComponent.h" />
     <ClInclude Include="HealthComponent.h" />
     <ClInclude Include="InputComponent.h" />
     <ClInclude Include="InventoryComponent.h" />
@@ -119,7 +119,7 @@
     <ClInclude Include="TileCollection.h" />
     <ClInclude Include="TileColumn.h" />
     <ClInclude Include="TransformComponent.h" />
-    <ClInclude Include="UserInterface.h" />
+    <ClInclude Include="UserInterfaceComponent.h" />
     <ClInclude Include="Vector3.h" />
   </ItemGroup>
   <ItemGroup>
