--- a/ShamanShowdown/ShamanShowdown.vcxproj.filters
+++ b/ShamanShowdown/ShamanShowdown.vcxproj.filters
@@ -27,6 +27,8 @@
     <ClCompile Include="UserInterface.cpp" />
     <ClCompile Include="MagicProjectileComponent.cpp" />
     <ClCompile Include="TeamMemberComponent.cpp" />
+    <ClCompile Include="MissileUse.cpp" />
+    <ClCompile Include="ItemSpawner.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Controls.h" />
@@ -57,6 +59,8 @@
     <ClInclude Include="UserInterface.h" />
     <ClInclude Include="MagicProjectileComponent.h" />
     <ClInclude Include="TeamMemberComponent.h" />
+    <ClInclude Include="MissileUse.h" />
+    <ClInclude Include="ItemSpawner.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="test.tga" />
