--- a/ShamanShowdown/ShamanShowdown.vcxproj
+++ b/ShamanShowdown/ShamanShowdown.vcxproj
@@ -133,10 +133,12 @@
     <Image Include="shaman-red.tga" />
     <Image Include="test.tga" />
     <Image Include="Textures\angryshitred.tga" />
+    <Image Include="Textures\Blue powerup.tga" />
     <Image Include="Textures\board.tga" />
     <Image Include="Textures\bridge-horz.tga" />
     <Image Include="Textures\bridge-vert.tga" />
     <Image Include="Textures\grass-flowers.tga" />
+    <Image Include="Textures\Green Powerup.tga" />
     <Image Include="Textures\healtjficlnutdshit.tga" />
     <Image Include="Textures\henge-lr.tga" />
     <Image Include="Textures\henge-tb.tga" />
@@ -145,6 +147,7 @@
     <Image Include="Textures\hud.tga" />
     <Image Include="Textures\HUDYOURMUDDA.tga" />
     <Image Include="Textures\mud.tga" />
+    <Image Include="Textures\Red Powerup.tga" />
     <Image Include="Textures\river-horizontal.tga" />
     <Image Include="Textures\river-tesselate.tga" />
     <Image Include="Textures\river-vertical.tga" />
@@ -161,6 +164,18 @@
     <Image Include="Textures\tree.tga" />
     <Image Include="Textures\wall.tga" />
     <Image Include="Textures\warmpissyellow.tga" />
+    <Image Include="Textures\warrior blue_back_1.tga" />
+    <Image Include="Textures\warrior blue_back_2.tga" />
+    <Image Include="Textures\warrior blue_front_1.tga" />
+    <Image Include="Textures\warrior blue_front_2.tga" />
+    <Image Include="Textures\warrior blue_left_1.tga" />
+    <Image Include="Textures\warrior blue_right_1.tga" />
+    <Image Include="Textures\warrior red_back_1.tga" />
+    <Image Include="Textures\warrior red_back_2.tga" />
+    <Image Include="Textures\warrior red_front_1.tga" />
+    <Image Include="Textures\warrior red_front_2.tga" />
+    <Image Include="Textures\warrior red_left_1.tga" />
+    <Image Include="Textures\warrior red_right_1.tga" />
     <Image Include="Textures\wiper-bar.tga" />
     <Image Include="Textures\yourhudisshit.tga" />
   </ItemGroup>
