--- a/ShamanShowdown/ShamanShowdown.vcxproj.filters
+++ b/ShamanShowdown/ShamanShowdown.vcxproj.filters
@@ -161,6 +161,51 @@
     <Image Include="Textures\warmpissyellow.tga">
       <Filter>Textures</Filter>
     </Image>
+    <Image Include="Textures\warrior blue_back_2.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\warrior blue_front_1.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\warrior blue_front_2.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\warrior blue_left_1.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\warrior blue_right_1.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\warrior red_back_1.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\warrior red_back_2.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\warrior red_front_1.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\warrior red_front_2.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\warrior red_left_1.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\warrior red_right_1.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\warrior blue_back_1.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\Green Powerup.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\Red Powerup.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\Blue powerup.tga">
+      <Filter>Textures</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="map1.gmp" />
