--- a/ShamanShowdown/ShamanShowdown.vcxproj.filters
+++ b/ShamanShowdown/ShamanShowdown.vcxproj.filters
@@ -224,6 +224,15 @@
     <Image Include="Textures\shaman blue_right_1.tga">
       <Filter>Textures</Filter>
     </Image>
+    <Image Include="Textures\titlescreen.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\gameoverblue.tga">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="Textures\gameoverred.tga">
+      <Filter>Textures</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="map1.gmp" />
